--- a/ImdCloud.Test/ImdCloud.Test.csproj
+++ b/ImdCloud.Test/ImdCloud.Test.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="media\1493668191.mp4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
@@ -15,6 +19,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ImdCloud\ImdCloud.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="media\1493668191.mp4">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
