--- a/ImdCloud/ImdCloud.csproj
+++ b/ImdCloud/ImdCloud.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.108.4" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
